Fix some IE issues. The scripts no longer fail due to setting unknown values for the white-space variable in the AutoSizeTextArea. This code could still use some work but now we only attempt the various properties depending on the browser. Later we should check the version too. This is bug #383. This also fixes alignment issues with replies on the review request page.

--- a/htdocs/css/reviews.css
+++ b/htdocs/css/reviews.css
@@ -316,6 +316,13 @@
 
 .review .reply-comments .reply-comment dl {
   border-left: 2px #D0D0D0 solid;
+
+  /*
+   * Set a border-bottom to prevent a bug in IE where, without a border-bottom,
+   * the content of the dl will shift left by the border-left size for every
+   * following item.
+   */
+  border-bottom: 1px #FAFAFA solid;
   margin: 0px;
   padding: 5px;
 }
